--- a/styles/styles.css
+++ b/styles/styles.css
@@ -38,7 +38,7 @@
   --heading-font-size-xs: 18px;
 
   /* nav height */
-  --nav-height: 64px;
+  --nav-height: 0px;
 
 }
 
@@ -221,12 +221,12 @@ main img {
 }
 
 main .section {
-  padding: 64px 16px;
+  padding: 16px;
 }
 
 @media (min-width: 600px) {
   main .section {
-    padding: 64px 32px;
+    padding: 32px 32px;
   }
 }
 
